{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 32,
  "lineage": "fc972194-ea47-2a34-440c-2f5b85f5c61f",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "nw_allow_external_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-02-22T11:55:54.605-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/lbg-cloud-incubation/global/firewalls/nik-allow-extssh",
            "log_config": [],
            "name": "nik-allow-extssh",
            "network": "https://www.googleapis.com/compute/v1/projects/lbg-cloud-incubation/global/networks/nik-terraform-network",
            "priority": 1000,
            "project": "lbg-cloud-incubation",
            "self_link": "https://www.googleapis.com/compute/v1/projects/lbg-cloud-incubation/global/firewalls/nik-allow-extssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "nw-allow-extssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.niklbg_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "nw_allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080",
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-02-22T11:55:54.591-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/lbg-cloud-incubation/global/firewalls/nik-fw-allow-http",
            "log_config": [],
            "name": "nik-fw-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/lbg-cloud-incubation/global/networks/nik-terraform-network",
            "priority": 1000,
            "project": "lbg-cloud-incubation",
            "self_link": "https://www.googleapis.com/compute/v1/projects/lbg-cloud-incubation/global/firewalls/nik-fw-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "nw-allow-http"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.niklbg_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "nw_allow_internal_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-02-22T11:55:54.520-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/lbg-cloud-incubation/global/firewalls/nik-allow-intssh",
            "log_config": [],
            "name": "nik-allow-intssh",
            "network": "https://www.googleapis.com/compute/v1/projects/lbg-cloud-incubation/global/networks/nik-terraform-network",
            "priority": 1000,
            "project": "lbg-cloud-incubation",
            "self_link": "https://www.googleapis.com/compute/v1/projects/lbg-cloud-incubation/global/firewalls/nik-allow-intssh",
            "source_ranges": null,
            "source_service_accounts": null,
            "source_tags": [
              "nw-allow-intssh-source"
            ],
            "target_service_accounts": null,
            "target_tags": [
              "nw-allow-intssh-target"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.niklbg_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "nikjenks",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20230213",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/lbg-cloud-incubation/zones/us-west2-a/disks/nik-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/lbg-cloud-incubation/zones/us-west2-a/instances/nik-vm",
            "instance_id": "888063115296230837",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "Cq8ghz5BZj8=",
            "metadata_startup_script": "sudo apt-get update \u0026\u0026 sudo apt-get install -y docker.io",
            "name": "nik-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.102.113.210",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/lbg-cloud-incubation/global/networks/nik-terraform-network",
                "network_ip": "10.0.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/lbg-cloud-incubation/regions/us-west2/subnetworks/niklbg-public-subnet",
                "subnetwork_project": "lbg-cloud-incubation"
              }
            ],
            "project": "lbg-cloud-incubation",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/lbg-cloud-incubation/zones/us-west2-a/instances/nik-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "nik-allow-extssh",
              "nw-allow-http",
              "nw-allow-intssh-source"
            ],
            "tags_fingerprint": "XrPmRh9WYKs=",
            "zone": "us-west2-a"
          },
          "dependencies": [
            "google_compute_network.niklbg_network",
            "google_compute_subnetwork.nikpublic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "niklbg_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/lbg-cloud-incubation/global/networks/nik-terraform-network",
            "mtu": 0,
            "name": "nik-terraform-network",
            "project": "lbg-cloud-incubation",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/lbg-cloud-incubation/global/networks/nik-terraform-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "nikpublic",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-02-22T11:55:56.928-08:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/lbg-cloud-incubation/regions/us-west2/subnetworks/niklbg-public-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "niklbg-public-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/lbg-cloud-incubation/global/networks/nik-terraform-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "lbg-cloud-incubation",
            "purpose": "PRIVATE",
            "region": "us-west2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/lbg-cloud-incubation/regions/us-west2/subnetworks/niklbg-public-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.niklbg_network"
          ]
        }
      ]
    }
  ]
}